
2022-01-24  Ron Norman <rjn@inglenet.com>

	* parser.y: Raise error if REPORT LINE has OCCURS
	* codegen.c: Partial work on handling REPORT LINE with OCCURS
				(but this is put back on the shelf for now)

2022-01-19  Ron Norman <rjn@inglenet.com>

	* tree.c,tree.h: Add cb_list_entry routine, returns Nth entry of a list
	* codegen.c:	Handle REPORT field with multiple COLUMNS and VALUES

2022-01-17  Ron Norman <rjn@inglenet.com>

	* parser.y: VARYING var FROM exp BY exp partly added
	* tree.h:	Add CB_VARY and updated cb_field accodingly
	* codegen.c: Updated to use new CB_VARY

2022-01-13  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept  SOURCE  expression and more than one SUM
	* tree.c: If SOURCE is expression, create temp field for result
	* codegen.c: If SOURCE expression, report temp field

2022-01-13  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept  SUM  expression-list
	* codegen.c: Update to generate code to compute SUM expressions
	* tree.c: Update to handle SUM expressions

2022-01-06  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix intialize of table to set 1st occurence
				and then propogate. Avoid if multiple VALUEs.
				Fix emitting literal for REPORT

2022-01-04  Ron Norman <rjn@inglenet.com>

	* codegen.c: Accept INDEXED file with PRIMARY KEY DUPLICATEs
	* parser.y: Warn if PRIMARY KEY WITH DUPLICATES and using BDB/OCI/ODBC

2021-12-30  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix handling of RESET ON phrase

2021-12-29  Ron Norman <rjn@inglenet.com>

	* parser.y: Save CONTROL FINAL fields
	* codegen.c: Emit CONTROL FINAL fields to cob_report

2021-12-25  Ron Norman <rjn@inglenet.com>

	* parser.y: Fix to check for missing REPORT data clauses
	* codegen.c: Handle report field with SOURCE "literal"
	* field.c:	Compute report field size for SOURCE "literal"
	* tree.c:	Check for report field missing PIC when using SUM clause

2021-12-23  Ron Norman <rjn@inglenet.com>

	* parser.y: Interim Changes to handle multiple VARYING clauses