@@ -2841,6 +2841,72 @@ BVAL is 0240
 
 AT_CLEANUP
 
+AT_SETUP([PICTURE COMP-X (2)])
+AT_KEYWORDS([Numeric])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA  DIVISION.
+       WORKING-STORAGE SECTION.
+       01  TSTN-4   PIC X(4)  COMP-N.
+       01  TSTN-8   PIC X(8)  COMP-N.
+       01  TSTX-4   PIC X(4)  COMP-5.
+       01  TSTX-8   PIC X(8)  COMP-X.
+       01  TST9-12  PIC 9(12) COMP-X.
+       01  TST9-19  PIC 9(19) COMP-X.
+       01  TSTB-34  PIC 9(34).
+       01  TST5-2   PIC 9(2)  COMP-5.
+       01  TST5-3   PIC 9(3)  COMP-5.
+       01  TST5-6   PIC 9(6)  COMP-5.
+       01  TST5-8   PIC 9(8)  COMP-5.
+
+       PROCEDURE DIVISION.
+           MOVE 96 TO TST5-2.
+           DISPLAY "TST5-2 :" TST5-2 ", Length: " LENGTH OF TST5-2.
+           MOVE 4096 TO TST5-3.
+           DISPLAY "TST5-3 :" TST5-3 ", Length: " LENGTH OF TST5-3.
+           MOVE 4096 TO TST5-6.
+           DISPLAY "TST5-6 :" TST5-6 ", Length: " LENGTH OF TST5-6.
+           MOVE 4096 TO TST5-8.
+           DISPLAY "TST5-8 :" TST5-8 ", Length: " LENGTH OF TST5-8.
+           MOVE 4294967295 TO TSTX-4.
+           DISPLAY "TSTX-4 :" TSTX-4 ", Length: " LENGTH OF TSTX-4.
+           MOVE 9223372036854775807 TO TSTX-8.
+           DISPLAY "TSTX-8 :" TSTX-8 ", Length: " LENGTH OF TSTX-8.
+           MOVE 4294967295 TO TSTN-4.
+           DISPLAY "TSTN-4 :" TSTN-4 ", Length: " LENGTH OF TSTN-4.
+           MOVE 9223372036854775807 TO TSTN-8.
+           DISPLAY "TSTN-8 :" TSTN-8 ", Length: " LENGTH OF TSTN-8.
+           MOVE 999999999999        TO TST9-12.
+           DISPLAY "TST9-12:" TST9-12 ", Length: " LENGTH OF TST9-12.
+           MOVE 9223372036854775807 TO TST9-19.
+           DISPLAY "TST9-19:" TST9-19 ", Length: " LENGTH OF TST9-19.
+           MOVE 999999999999999999999999999999999 TO TSTB-34.
+           DISPLAY "TSTB-34:" TSTB-34 ", Length: " LENGTH OF TSTB-34.
+           COMPUTE TSTB-34 = TSTB-34 * 10000000000.
+           DISPLAY "TSTB-34:" TSTB-34 ", Length: " LENGTH OF TSTB-34.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE -std=default prog.cob ], [0], [], [])
+
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [TST5-2 :096, Length: 1
+TST5-3 :04096, Length: 2
+TST5-6 :0000004096, Length: 4
+TST5-8 :0000004096, Length: 4
+TSTX-4 :4294967295, Length: 4
+TSTX-8 :9223372036854775807, Length: 8
+TSTN-4 :4294967295, Length: 4
+TSTN-8 :09223372036854775807, Length: 8
+TST9-12:999999999999, Length: 5
+TST9-19:9223372036854775807, Length: 8
+TSTB-34:0999999999999999999999999999999999, Length: 34
+TSTB-34:9999999999999999999999990000000000, Length: 34
+], [])
+
+AT_CLEANUP
+
 
 AT_SETUP([SORT: table sort])
 AT_KEYWORDS([runmisc])
